[package]
name = "adakairust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cardano_ouroboros_network = "0.2.6"
futures = "0.3.8"
serde = { version = "1.0.117", features = ["derive"] }
serde-aux = "2.1.1"
serde_cbor = "0.11.1"
serde_json = "1.0.62"
curl = "0.4.39"
# logging
log = { version = "0.4.11", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.8.1"
test-env-log = "0.2.7"
pretty_env_logger = "0.4.0"
num_cpus = "1.13.0"